CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
PROJECT(pe) 

#util
SET(UTIL_DIR ${CMAKE_SOURCE_DIR}/util)
FIND_PACKAGE(UTIL)
INCLUDE_DIRECTORIES(${UTIL_INCLUDE_DIRS})

#struct
SET(STRUCT_DIR ${CMAKE_SOURCE_DIR}/struct)
FIND_PACKAGE(STRUCT)
INCLUDE_DIRECTORIES(${STRUCT_INCLUDE_DIRS})

SET(SRC_LIST
pe.cpp)

#static library
ADD_LIBRARY(pe STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(pe PROPERTIES OUTPUT_NAME "pe")
SET_TARGET_PROPERTIES(pe PROPERTIES CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(pe ${STRUCT_LIBRARIES})
ADD_DEPENDENCIES(pe struct)

#tool 
SET(TOOL_SRC_LIST
petool.cpp)

ADD_EXECUTABLE(petool ${TOOL_SRC_LIST})
TARGET_LINK_LIBRARIES(petool pe)
TARGET_LINK_LIBRARIES(petool ${UTIL_LIBRARIES})
TARGET_LINK_LIBRARIES(petool ${STRUCT_LIBRARIES})
ADD_DEPENDENCIES(petool pe struct util)

#install
INSTALL(TARGETS pe 	   ARCHIVE DESTINATION lib)	
INSTALL(TARGETS petool RUNTIME DESTINATION bin)






