
SET(SRC_LIST
pe.cpp)



ADD_LIBRARY(pe_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(pe_static PROPERTIES OUTPUT_NAME "pe")
SET_TARGET_PROPERTIES(pe_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(pe_dynamic SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(pe_dynamic version)
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES OUTPUT_NAME "pe")
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES VERSION 0.3 SOVERSION 1)

#install
INSTALL(TARGETS pe_static pe_dynamic
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION lib)
INSTALL(TARGETS pe_dynamic DESTINATION lib )
INSTALL(FILES pe.h DESTINATION include)
INSTALL(FILES imgfmt.h DESTINATION include)	

