
SET(SRC_LIST
pe.cpp
strconv.cpp)



#static library
ADD_LIBRARY(pe_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(pe_static PROPERTIES OUTPUT_NAME "pe")
SET_TARGET_PROPERTIES(pe_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#dynamic library
ADD_LIBRARY(pe_dynamic SHARED ${SRC_LIST})
IF(WIN32)
TARGET_LINK_LIBRARIES(pe_dynamic version)
ENDIF(WIN32)
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES OUTPUT_NAME "pe")
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(pe_dynamic PROPERTIES VERSION 0.3 SOVERSION 1)

#tool 
SET(TOOL_SRC_LIST
petool.cpp
strconv.cpp)

ADD_EXECUTABLE(petool ${TOOL_SRC_LIST})
TARGET_LINK_LIBRARIES(petool pe_static)
TARGET_LINK_LIBRARIES(petool filemap)
IF(WIN32)
TARGET_LINK_LIBRARIES(petool version)
ENDIF(WIN32)

#install
INSTALL(TARGETS pe_static pe_dynamic
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION bin
	RUNTIME DESTINATION bin)
INSTALL(FILES pe.h DESTINATION include)
INSTALL(FILES imgfmt.h DESTINATION include)	
INSTALL(TARGETS petool RUNTIME DESTINATION bin)



