
SET(SRC_LIST
testpe.cpp)

ADD_EXECUTABLE(testpe ${SRC_LIST})
TARGET_LINK_LIBRARIES(testpe pe_static)
TARGET_LINK_LIBRARIES(testpe cppunit)
TARGET_LINK_LIBRARIES(testpe filemap)
IF(WIN32)
TARGET_LINK_LIBRARIES(testpe version)
ELSE(WIN32)
TARGET_LINK_LIBRARIES(testpe dl)
ENDIF(WIN32)

#install
INSTALL(TARGETS testpe RUNTIME DESTINATION bin)


INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/87f6447ba9b75486969b59e1c911ac72.sample
	DESTINATION bin/testpe.config)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/0c94b325dca948dcdf81036a5306901b.sample
	DESTINATION bin/testpe.config)
